# vis_proj3

./: .gitignore  CMakeLists.txt  Pipfile  PythonVTKSetup.md  QuadraticVisualization.py  README.md  main.cpp  medical-1.py  medical-2.py  medical-3.py  medical-4.py  medical.py  project.py
python/: medical.py
